Исправлены баги и добавлены шрифты

--- a/personal.html
+++ b/personal.html
@@ -109,9 +109,9 @@
             </select>
             <br>
             <label>Доставка</label>
-            <input class="form" type="radio"> Почтой
-            <input class="form" type="radio"> Электронно
-            <input class="form" type="radio"> Курьером
+            <input class="form" name="dostavka" type="radio"> Почтой
+            <input class="form" name="dostavka" type="radio"> Электронно
+            <input class="form" name="dostavka" type="radio"> Курьером
             <br>
             <label>Требуется накладная</label>
             <input class="form" type="checkbox">
